--- a/resources/assets/sass/utility/siteVars.scss
+++ b/resources/assets/sass/utility/siteVars.scss
@@ -4,18 +4,18 @@ $imgBackgroundLandscape: "/img/backgroundLandscape.jpg";
 $imgBackgroundPortrait: "/img/backgroundPortrait.jpg";
 
 //Nav Buttons
-$navButtonColor1: #33FF00;
-$navButtonColor2: #188BC0;
-$navHoverColor1:  #33FF00;
-$navHoverColor2:  #000000;
+$navButtonColor1: #2ECC71;
+$navButtonColor2: #2ECC71;
+$navHoverColor1:  #27AE60;
+$navHoverColor2:  #27AE60;
 $navTextColor:    #FFFFFF;
 $navTextHoverColor: #FFFFFF;
 
 //Action Button Variables:
 $actButtonColor2: #E8E8E8;
 $actButtonColor1: #E8E8E8;
-$actHoverColor1:  #000000;
-$actHoverColor2:  #33FF33;
+$actHoverColor1:  #27AE60;
+$actHoverColor2:  #27AE60;
 $actTextColor:    #000000;
 $actTextHoverColor: #FFFFFF;
 
@@ -43,7 +43,7 @@ $bottomBackgroundColor: #202020;
 $sideMargin: 0;
 
 //Profiles
-$profileBackgroundColor: #E8E8E8;
+$profileBackgroundColor: #BDC3C7;
 $profileOpacity: 0.7;
 $profileTransition: opacity 1s;
 
