--- a/resources/assets/sass/mixins/contentDiv.scss
+++ b/resources/assets/sass/mixins/contentDiv.scss
@@ -6,6 +6,6 @@
   opacity: $centerOpacity;
   border: 2px solid;
   border-radius: 25px;
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: "Open Sans", Arial, serif;
   z-index: 2;
 }
