--- a/resources/assets/sass/mixins/sideDiv.scss
+++ b/resources/assets/sass/mixins/sideDiv.scss
@@ -4,12 +4,8 @@
   height: auto;
   margin: 0 auto;
   top: 10.15%;
-  background: -webkit-linear-gradient(#F8F8F8  , #C0C0C0 );
-  background: -o-linear-gradient(#F8F8F8 , #C0C0C0 );
-  background: -moz-linear-gradient(#F8F8F8 , #C0C0C0 );
-  background: linear-gradient(#F8F8F8 , #C0C0C0 );
+  background-color: #BDC3C7;
   position: fixed;
-  border: 1px solid;
   border-radius: 20px;
   font-family: "Open Sans", Arial, serif;
 }
