--- a/resources/assets/sass/nav/topNav.scss
+++ b/resources/assets/sass/nav/topNav.scss
@@ -1,13 +1,11 @@
 .topNav
 {
   font-family: "Open Sans", Arial, serif;
-  background-color: #101010;
-  border: 1px solid #A8A8A8;
+  background-color: #27AE60;
   border-radius: 4px;
-  color: #FFFFFF;
+  color: #ECF0F1;
   display: block;
-  margin: .5% auto;
-  max-width: 37%;
+  margin: 0 auto;
 }
 .topNav ul
 {
@@ -22,13 +20,13 @@
   border-radius:4px;
   -moz-border-radius:4px;
   -webkit-border-radius:4px;
-  border:1px solid #101010;
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
   -ms-transition: all 0.2s;
   -o-transition: all 0.2s;
   transition: all 0.2s;
 }
+
 .topNav > ul > li > a > .caret
 {
   border-top: 4px solid #aaa;
@@ -46,11 +44,12 @@
 }
 .topNav > ul > li > a
 {
-  color: #A8A8A8;
+  color: #ECF0F1;
   display: block;
   line-height: 56px;
   padding: 0 24px;
   text-decoration: none;
+  font-weight: bold;
 }
 .topNav > ul > li > p > .caret
 {
@@ -67,19 +66,20 @@
   -o-transition: color 0.1s linear;
   transition: color 0.1s linear;
 }
+
 .topNav > ul > li > p
 {
-  color: #A8A8A8;
+  color: #ECF0F1;
   display: block;
   padding: 0 24px;
   text-decoration: none;
+  font-weight: bold;
 }
 .topNav > ul > li:hover
 {
   border-radius:4px;
   -moz-border-radius:4px;
   -webkit-border-radius:4px;
-  border:1px solid #003300;
   color: $navTextHoverColor;
   background: -webkit-linear-gradient($navHoverColor1, $navHoverColor2);
   background: -o-linear-gradient($navHoverColor1, $navHoverColor2);
@@ -108,10 +108,7 @@
 
 .topNav > ul > li > div
 {
-  background-color: #202020;
-  border-top: 0;
-  border-radius: 0 0 4px 4px;
-  box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.055);
+  background-color: #BDC3C7;
   display: none;
   margin: 0;
   opacity: 0;
@@ -140,7 +137,7 @@
 
 .topNav > ul > li > div ul > li > a
 {
-  color: #E8E8E8;
+  color: #2C3E50;
   display: block;
   padding: 12px 24px;
   text-decoration: none;
@@ -148,6 +145,7 @@
 
 .topNav > ul > li > div ul > li:hover > a
 {
-  background-color: #303030;
+  background-color: #27AE60;
+  color: #FFFFFF;
 }
 
