--- a/resources/assets/sass/utility/siteVars.scss
+++ b/resources/assets/sass/utility/siteVars.scss
@@ -25,7 +25,7 @@ $centerOpacity: 0.97;
 $centerPosition: 5%;
 
 //Horizontal Line Variables:
-$mainHrColor: #009900;
+$mainHrColor: #27AE60;
 
 //Inner Side Menus
 $profileScrollHeight: 155px;
