--- a/resources/assets/sass/nav/profileNav.scss
+++ b/resources/assets/sass/nav/profileNav.scss
@@ -28,7 +28,6 @@
 
 .profileNav > ul > li > a
 {
-  color: #202020;
   display: block;
   line-height: 56px;
   padding: 0 24px;
@@ -40,10 +39,7 @@
   -moz-border-radius:4px;
   -webkit-border-radius:4px;
   color: $navTextHoverColor;
-  background: -webkit-linear-gradient($navHoverColor1, $navHoverColor2);
-  background: -o-linear-gradient($navHoverColor1, $navHoverColor2);
-  background: -moz-linear-gradient($navHoverColor1, $navHoverColor2);
-  background: linear-gradient($navHoverColor1, $navHoverColor2);
+  background-color: #27AE60;
 }
 
 .profileNav > ul > li:hover > a
@@ -53,10 +49,9 @@
 
 .profileNav > ul > li > div
 {
-  background-color: #202020;
+  background-color: #BDC3C7;
   border-top: 0;
   border-radius: 0 0 4px 4px;
-  box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.055);
   display: none;
   margin: 0;
   opacity: 0;
@@ -81,12 +76,11 @@
 .profileNav > ul > li > div ul > li
 {
   display: block;
-  border:1px solid #101010;
 }
 
 .profileNav > ul > li > div ul > li > a
 {
-  color: #E8E8E8;
+  color: #2C3E50;
   display: block;
   padding: 12px 24px;
   text-decoration: none;
@@ -94,6 +88,7 @@
 
 .profileNav > ul > li > div ul > li:hover > a
 {
-  background-color: #303030;
+  background-color: #27AE60;
+  color: #FFFFFF;
 }
 
