--- a/resources/assets/sass/nav/profileNav.scss
+++ b/resources/assets/sass/nav/profileNav.scss
@@ -1,3 +1,55 @@
+@mixin profileColor($profileBackgroundHoverColor, $profileHoverColor, $profileDivBackground, $profileDivColor, $profileDivHoverBackground, $profileDivHoverColor)
+{
+  .profileNav > ul > li:hover
+  {
+    border-radius:4px;
+    -moz-border-radius:4px;
+    -webkit-border-radius:4px;
+    color: $profileHoverColor;
+    background-color: $profileBackgroundHoverColor;
+  }
+  .profileNav > ul > li:hover > a
+  {
+    color: $profileHoverColor;
+  }
+  .profileNav > ul > li > div
+  {
+    background-color: $profileDivBackground;
+    border-top: 0;
+    border-radius: 0 0 4px 4px;
+    display: none;
+    margin: 0;
+    opacity: 0;
+    position: fixed;
+    width: 165px;
+    visibility: hidden;
+    z-index: 100;
+    -webkit-transiton: opacity 0.2s;
+    -moz-transition: opacity 0.2s;
+    -ms-transition: opacity 0.2s;
+    -o-transition: opacity 0.2s;
+    -transition: opacity 0.2s;
+  }
+  .profileNav > ul > li > div ul > li > a
+  {
+    color: $profileDivColor;
+    display: block;
+    padding: 12px 24px;
+    text-decoration: none;
+  }
+  .profileNav > ul > li > div ul > li > a
+  {
+    color: $profileDivColor;
+    display: block;
+    padding: 12px 24px;
+    text-decoration: none;
+  }
+  .profileNav > ul > li > div ul > li:hover > a
+  {
+    background-color: $profileDivHoverBackground;
+    color: $profileDivHoverColor;
+  }
+}
 .profileNav
 {
   font-family: "Open Sans", Arial, serif;
@@ -33,38 +85,6 @@
   padding: 0 24px;
   text-decoration: none;
 }
-.profileNav > ul > li:hover
-{
-  border-radius:4px;
-  -moz-border-radius:4px;
-  -webkit-border-radius:4px;
-  color: $navTextHoverColor;
-  background-color: #27AE60;
-}
-
-.profileNav > ul > li:hover > a
-{
-  color: rgb( 255, 255, 255 );
-}
-
-.profileNav > ul > li > div
-{
-  background-color: #BDC3C7;
-  border-top: 0;
-  border-radius: 0 0 4px 4px;
-  display: none;
-  margin: 0;
-  opacity: 0;
-  position: fixed;
-  width: 165px;
-  visibility: hidden;
-  z-index: 100;
-  -webkit-transiton: opacity 0.2s;
-  -moz-transition: opacity 0.2s;
-  -ms-transition: opacity 0.2s;
-  -o-transition: opacity 0.2s;
-  -transition: opacity 0.2s;
-}
 
 .profileNav > ul > li:hover > div
 {
@@ -77,18 +97,3 @@
 {
   display: block;
 }
-
-.profileNav > ul > li > div ul > li > a
-{
-  color: #2C3E50;
-  display: block;
-  padding: 12px 24px;
-  text-decoration: none;
-}
-
-.profileNav > ul > li > div ul > li:hover > a
-{
-  background-color: #27AE60;
-  color: #FFFFFF;
-}
-
