--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -60,13 +60,6 @@
   display: block;
   margin: 0 auto; }
 
-.topNav > ul > li:hover {
-  border-radius: 4px;
-  moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  color: #ECF0F1;
-  background-color: #27AE60; }
-
 .topNav > ul > li > p {
   color: #ECF0F1;
   display: block;
@@ -82,6 +75,9 @@
   background-color: #27AE60; }
 
 .topNav > ul > li:hover > a {
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
   color: #ECF0F1;
   background-color: #27AE60; }
 
@@ -116,13 +112,6 @@
 .topNav > ul > li:hover > p > .caret {
   border-top-color: #ECF0F1; }
 
-.profileNav {
-  font-family: "Open Sans", Arial, serif;
-  border-radius: 4px;
-  color: #000000;
-  width: 85%;
-  margin: .5% auto; }
-
 .profileNav ul {
   margin: 0;
   padding: 0; }
@@ -149,6 +138,13 @@
 
 .profileNav > ul > li > div ul > li {
   display: block; }
+
+.profileNav {
+  font-family: "Open Sans", Arial, serif;
+  border-radius: 4px;
+  color: #000000;
+  width: 85%;
+  margin: .5% auto; }
 
 .profileNav > ul > li:hover {
   border-radius: 4px;
@@ -417,6 +413,103 @@
   overflow: auto;
   float: left; }
 
+.postCard {
+  background-color: #FFFFFF;
+  border-radius: 4px;
+  border: 1px solid #BDC3C7;
+  margin: 0 auto 15px auto;
+  width: 80%; }
+
+.elevationSection {
+  position: relative;
+  display: inline-block;
+  padding-right: 10px; }
+
+.elevationSection .tooltiptext {
+  visibility: hidden;
+  width: 200px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -100px; }
+
+.elevationSection:hover .tooltiptext {
+  visibility: visible; }
+
+.extensionSection {
+  position: relative;
+  display: inline-block;
+  padding-left: 10px; }
+
+.extensionSection .tooltiptext {
+  visibility: hidden;
+  width: 200px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -100px; }
+
+.extensionSection:hover .tooltiptext {
+  visibility: visible; }
+
+.extensionContent {
+  text-align: left;
+  font-size: 100%;
+  padding: 10px;
+  border: 2px solid #202020;
+  border-radius: 12px;
+  display: none; }
+
+#container {
+  text-align: center;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  overflow: auto; }
+
+#centerContent {
+  width: 50%;
+  height: 100%;
+  font-family: "Open Sans", Arial, serif;
+  margin: 1.5% auto; }
+
+#centerText {
+  margin: 5px auto;
+  width: 99%;
+  height: auto; }
+
+#centerTextContent {
+  text-align: left;
+  font-size: 110%;
+  padding-left: 15px;
+  padding-right: 15px; }
+
+#leftContainer {
+  opacity: .9;
+  transition: opacity 1s; }
+
+#rightContainer {
+  opacity: .9;
+  transition: opacity 1s; }
+
+#questionContainer {
+  margin: 0 auto;
+  width: 50%; }
+
 .formDataContainer {
   width: 80%;
   height: auto;
@@ -461,6 +554,13 @@
 
 .formDeletion {
   display: inline-block; }
+
+.tagLabel {
+  font-weight: bold; }
+
+.tagSelector {
+  border-color: #BDC3C7;
+  border-radius: 5px; }
 
 @media screen and (min-width: 1301px) {
   html {
@@ -561,6 +661,9 @@ p.verification {
   #tour {
     min-width: 296px; } }
 
+html {
+  background-color: #ECF0F1; }
+
 /* unvisited link */
 a:link {
   color: #202020;
@@ -591,13 +694,6 @@ p.extras {
   width: auto;
   cursor: pointer; }
 
-.tagLabel {
-  font-weight: bold; }
-
-.tagSelector {
-  border-color: #BDC3C7;
-  border-radius: 5px; }
-
 .hover {
   -webkit-user-select: none;
   -webkit-touch-callout: none;
@@ -617,33 +713,6 @@ ul.tour {
 .bookmarkRight {
   width: 40%;
   float: right; }
-
-.extensionContent {
-  text-align: left;
-  font-size: 100%;
-  padding: 10px;
-  border: 2px solid;
-  border-color: #202020;
-  border-radius: 12px;
-  display: none; }
-
-#container {
-  text-align: center;
-  position: fixed;
-  height: 100%;
-  width: 100%; }
-
-#leftContainer {
-  opacity: .9;
-  transition: opacity 1s; }
-
-#rightContainer {
-  opacity: .9;
-  transition: opacity 1s; }
-
-#questionContainer {
-  margin: 0 auto;
-  width: 50%; }
 
 table {
   border-collapse: separate;
@@ -702,10 +771,11 @@ th {
   width: 21%;
   height: auto;
   margin: 0 auto;
-  top: 10.15%;
+  top: 8.5%;
   background-color: #BDC3C7;
   position: fixed;
   border-radius: 20px;
+  border: 1px solid #BDC3C7;
   font-family: "Open Sans", Arial, serif;
   left: 2em; }
 
@@ -713,22 +783,15 @@ th {
   width: 21%;
   height: auto;
   margin: 0 auto;
-  top: 10.15%;
+  top: 8.5%;
   background-color: #BDC3C7;
   position: fixed;
   border-radius: 20px;
+  border: 1px solid #BDC3C7;
   font-family: "Open Sans", Arial, serif;
   right: 2em; }
 
-#centerContent {
-  width: 50%;
-  height: 80%;
-  font-family: "Open Sans", Arial, serif;
-  margin: 1.5% auto; }
-
 article {
-  height: auto;
-  max-height: 100%;
   opacity: 0.97;
   border: 2px solid;
   border-radius: 12px;
@@ -737,19 +800,6 @@ article {
 #centerMenu {
   margin: 0 auto;
   width: 99%; }
-
-#centerText {
-  margin: 5px auto;
-  width: 99%;
-  height: auto;
-  max-height: 635px;
-  overflow: auto; }
-
-#centerTextContent {
-  text-align: left;
-  font-size: 110%;
-  padding-left: 15px;
-  padding-right: 15px; }
 
 #centerTextContent > button {
   padding: 8px 13px;
@@ -906,12 +956,6 @@ article {
     font-size: 100%; }
   .navButton {
     font-size: 100%; }
-  #centerText {
-    max-height: 775px; }
-  #centerTextContent {
-    max-height: 680px;
-    padding-left: 15px;
-    padding-right: 15px; }
   .createTitleText {
     max-width: 30%; }
   .innerProfileMenus {
@@ -1091,7 +1135,7 @@ article {
     height: 84%;
     margin: 1.5% auto; }
   #centerText {
-    max-height: 350px; }
+    max-height: 355px; }
   #centerTextContent {
     max-height: 190px;
     padding-left: 3px;
@@ -1164,7 +1208,7 @@ article {
     border: 2px solid;
     border-radius: 25px; }
   #centerText {
-    max-height: 265px; }
+    max-height: 270px; }
   #centerTextContent {
     max-height: 150px;
     padding-left: 3px;
@@ -1224,7 +1268,7 @@ article {
     height: 84%;
     margin: 1.5% auto; }
   #centerText {
-    max-height: 235px; }
+    max-height: 240px; }
   .createTitleText {
     max-width: 70%; }
   #centerTextContent {
@@ -1295,7 +1339,7 @@ article {
     height: 85%;
     margin: 1.5% auto; }
   #centerText {
-    max-height: 100px; }
+    max-height: 105px; }
   #centerTextContent {
     max-height: 100px;
     padding-left: 3px;
@@ -1360,7 +1404,7 @@ article {
     height: 99%;
     margin: 0.0% auto; }
   #centerText {
-    max-height: 200px; }
+    max-height: 205px; }
   .createTitleText {
     width: 190px; }
   #centerTextContent {
