--- a/resources/assets/sass/nav/forms.scss
+++ b/resources/assets/sass/nav/forms.scss
@@ -55,3 +55,13 @@
 {
   display: inline-block;
 }
+
+.tagLabel
+{
+  font-weight: bold;
+}
+.tagSelector
+{
+  border-color: #BDC3C7;
+  border-radius: 5px;
+}
