--- a/resources/assets/sass/utility/starThemeVars.scss
+++ b/resources/assets/sass/utility/starThemeVars.scss
@@ -2,6 +2,8 @@
 $imgBackground1: "/img/background.jpg";
 $imgBackgroundLandscape: "/img/backgroundLandscape.jpg";
 $imgBackgroundPortrait: "/img/backgroundPortrait.jpg";
+//Background Colors:
+$mainBackgroundColor: #ECF0F1;
 
 //Nav Buttons
 $navButtonColor1: #27AE60;
