--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,6 +9,7 @@
   border-radius: 4px;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
+  -webkit-transition: all 0.2s;
   transition: all 0.2s; }
 
 .topNav > ul > li > a > .caret {
@@ -20,6 +21,7 @@
   height: 0;
   width: 0;
   vertical-align: middle;
+  -webkit-transition: color 0.1s linear;
   transition: color 0.1s linear; }
 
 .topNav > ul > li > a {
@@ -39,6 +41,7 @@
   height: 0;
   width: 0;
   vertical-align: middle;
+  -webkit-transition: color 0.1s linear;
   transition: color 0.1s linear; }
 
 .topNav > ul > li:hover > a > .caret {
@@ -123,6 +126,7 @@
   border-radius: 4px;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
+  -webkit-transition: all 0.2s;
   transition: all 0.2s; }
 
 .profileNav > ul > li > a {
@@ -205,6 +209,7 @@
   border-radius: 4px;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
+  -webkit-transition: all 0.2s;
   transition: all 0.2s; }
 
 .infoNav > ul > li > div {
@@ -277,6 +282,7 @@
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border: 1px solid #E8E8E8;
+  -webkit-transition: all 0.2s;
   transition: all 0.2s; }
 
 .beliefNav > ul > li > div {
@@ -420,10 +426,17 @@
   margin: 0 auto 15px auto;
   width: 80%; }
 
+.cardPhoto img {
+  max-width: 100%;
+  height: auto;
+  width: auto\9;
+  /* ie8 */ }
+
 .elevationSection {
   position: relative;
   display: inline-block;
-  padding-right: 10px; }
+  padding-right: 10px;
+  padding-bottom: 3px; }
 
 .elevationSection .tooltiptext {
   visibility: hidden;
@@ -446,7 +459,8 @@
 .extensionSection {
   position: relative;
   display: inline-block;
-  padding-left: 10px; }
+  padding-left: 10px;
+  padding-bottom: 3px; }
 
 .extensionSection .tooltiptext {
   visibility: hidden;
@@ -500,10 +514,12 @@
 
 #leftContainer {
   opacity: .9;
+  -webkit-transition: opacity 1s;
   transition: opacity 1s; }
 
 #rightContainer {
   opacity: .9;
+  -webkit-transition: opacity 1s;
   transition: opacity 1s; }
 
 #questionContainer {
@@ -584,8 +600,7 @@
   min-width: 332px; }
 
 h3 {
-  color: #2C3E50;
-  text-decoration: underline; }
+  color: #2C3E50; }
 
 label.login {
   color: #2C3E50; }
@@ -874,6 +889,7 @@ article {
   border: 1px solid #202020; }
   .navButton:hover {
     color: #FFFFFF;
+    background: -webkit-linear-gradient(#27AE60, #27AE60);
     background: linear-gradient(#27AE60, #27AE60); }
 
 .interactButton {
@@ -890,6 +906,7 @@ article {
   overflow: hidden; }
   .interactButton:hover {
     color: #FFFFFF;
+    background: -webkit-linear-gradient(#27AE60, #27AE60);
     background: linear-gradient(#27AE60, #27AE60); }
 
 .interactButtonLeft {
@@ -907,6 +924,7 @@ article {
   text-align: left; }
   .interactButtonLeft:hover {
     color: #FFFFFF;
+    background: -webkit-linear-gradient(#27AE60, #27AE60);
     background: linear-gradient(#27AE60, #27AE60); }
 
 .indexButton {
@@ -924,6 +942,7 @@ article {
   border: solid 1px; }
   .indexButton:hover {
     color: #FFFFFF;
+    background: -webkit-linear-gradient(#27AE60, #27AE60);
     background: linear-gradient(#27AE60, #27AE60); }
 
 @media screen and (min-width: 1501px) and (min-height: 850px) {
