--- a/resources/assets/sass/nav/cardNav.scss
+++ b/resources/assets/sass/nav/cardNav.scss
@@ -7,10 +7,25 @@
   width: 80%;
 }
 
+.cardPhoto
+{
+  img {
+    max-width: 100%;
+    height: auto;
+    width: auto\9; /* ie8 */
+  }
+}
+
 .elevationSection {
   position: relative;
   display: inline-block;
   padding-right: 10px;
+  padding-bottom: 3px;
+
+}
+.elevationIcon
+{
+
 }
 
 .elevationSection .tooltiptext {
@@ -38,6 +53,7 @@
   position: relative;
   display: inline-block;
   padding-left: 10px;
+  padding-bottom: 3px;
 }
 
 .extensionSection .tooltiptext {
