--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -421,7 +421,7 @@
 
 .postCard {
   background-color: #FFFFFF;
-  border-radius: 4px;
+  border-radius: 7px;
   border: 1px solid #BDC3C7;
   margin: 0 auto 15px auto;
   width: 80%; }
@@ -432,17 +432,21 @@
   width: auto\9;
   /* ie8 */ }
 
+.cardExcerpt {
+  text-align: left;
+  padding-left: 20px;
+  padding-right: 20px; }
+
 .elevationSection {
   position: relative;
-  display: inline-block;
   padding-right: 10px;
-  padding-bottom: 3px; }
+  display: inline-block; }
 
 .elevationSection .tooltiptext {
   visibility: hidden;
   width: 200px;
-  background-color: black;
-  color: #fff;
+  background-color: #2C3E50;
+  color: #ECF0F1;
   text-align: center;
   border-radius: 6px;
   padding: 5px 0;
@@ -453,7 +457,38 @@
   left: 50%;
   margin-left: -100px; }
 
-.elevationSection:hover .tooltiptext {
+.elevationIcon {
+  display: inline-block; }
+
+.elevationIcon:hover .tooltiptext {
+  visibility: visible; }
+
+.elevationCounter {
+  display: inline-block;
+  padding-bottom: 10px; }
+
+.beaconSection {
+  position: relative;
+  display: inline-block;
+  padding-right: 10px;
+  padding-bottom: 3px; }
+
+.beaconSection .tooltiptext {
+  visibility: hidden;
+  width: 200px;
+  background-color: #2C3E50;
+  color: #ECF0F1;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -100px; }
+
+.beaconSection:hover .tooltiptext {
   visibility: visible; }
 
 .extensionSection {
@@ -465,8 +500,8 @@
 .extensionSection .tooltiptext {
   visibility: hidden;
   width: 200px;
-  background-color: black;
-  color: #fff;
+  background-color: #2C3E50;
+  color: #ECF0F1;
   text-align: center;
   border-radius: 6px;
   padding: 5px 0;
