Updated home screen, div for buttons

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -13,6 +13,7 @@
 @import 'nav/indexNav';
 @import 'nav/cardNav';
 @import 'nav/containers';
+@import 'nav/links';
 @import 'mixins/colorButton';
 @import 'mixins/baseButton';
 
