--- a/resources/assets/sass/app2.scss
+++ b/resources/assets/sass/app2.scss
@@ -12,6 +12,7 @@
 @import 'nav/pagination';
 @import 'nav/indexNav';
 @import 'nav/cardNav';
+@import 'nav/links';
 @import 'nav/containers';
 @import 'mixins/colorButton';
 @import 'mixins/baseButton';
