--- a/resources/assets/sass/mixins/mediaQueries.scss
+++ b/resources/assets/sass/mixins/mediaQueries.scss
@@ -228,7 +228,7 @@
 
     #leftSide
     {
-      top: 10.15%;
+      top: 56.1px;
       height: auto;
       visibility: visible;
       left: .7em;
@@ -237,7 +237,7 @@
     }
     #rightSide
     {
-      top: 10.15%;
+      top: 56.1px;
       height: auto;
       visibility: visible;
       right: .7em;
