--- a/resources/assets/sass/mixins/sideDiv.scss
+++ b/resources/assets/sass/mixins/sideDiv.scss
@@ -3,7 +3,7 @@
   width: 21%;
   height: auto;
   margin: 0 auto;
-  top: 8.5%;
+  top: 56.1px;
   background-color: $mainBackgroundColor;
   position: fixed;
   border-radius: 20px;
