--- a/resources/assets/sass/nav/cardNav.scss
+++ b/resources/assets/sass/nav/cardNav.scss
@@ -1,4 +1,4 @@
-.postCard
+.contentCard
 {
   background-color: #FFFFFF;
   border-radius: 7px;
@@ -65,6 +65,7 @@
   position: relative;
   display: inline-block;
   padding-right: 10px;
+  padding-left: 10px;
   padding-bottom: 3px;
 }
 .beaconSection .tooltiptext {
