--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -43,6 +43,12 @@ a:link {
   text-decoration: none;
 }
 
+#map
+{
+  text-align: left;
+  width: 100%;
+}
+
 /* visited link */
 a:visited {
   color: #2C3E50;
