--- a/resources/assets/sass/nav/contentNav.scss
+++ b/resources/assets/sass/nav/contentNav.scss
@@ -13,8 +13,15 @@
 {
   text-align: center;
   padding-bottom: 5px;
-  padding-top: 5px;
   font-weight: 700;
+}
+.contentMainTitle
+{
+  text-align: center;
+  padding-bottom: 5px;
+  margin-top: 15px;
+  font-weight: 700;
+  //color: #2C3E50;
 }
 .contentNavTitleLeft
 {
