--- a/resources/assets/sass/nav/contentNav.scss
+++ b/resources/assets/sass/nav/contentNav.scss
@@ -37,3 +37,34 @@
   padding-bottom: 5px;
   padding-left: 20px;
 }
+
+.contentHeaderSeparator
+{
+  width: 80%;
+  background-color: #27AE60;
+  border-radius: 7px;
+  border: 1px solid #BDC3C7;
+  margin: 25px auto auto auto;
+
+}
+.contentHeaderSeparator > h3
+{
+  color: #ECF0F1;
+}
+
+.sponsorContentLogo
+{
+
+  height: 40px;
+  margin: 0 auto;
+  width: 200px;
+}
+.sponsorContentLogo img
+{
+  max-width:100%;
+  max-height:100%;
+}
+
+
+
+
