--- a/resources/assets/sass/nav/forms.scss
+++ b/resources/assets/sass/nav/forms.scss
@@ -65,3 +65,10 @@
   border-color: #BDC3C7;
   border-radius: 5px;
 }
+
+.inputField
+{
+  outline: none !important;
+  border:1px solid #27AE60;
+  box-shadow: 0 0 10px #27AE60;
+}
