--- a/resources/assets/sass/nav/links.scss
+++ b/resources/assets/sass/nav/links.scss
@@ -5,16 +5,19 @@
   border-radius:7px;
   -moz-border-radius:7px;
   -webkit-border-radius:7px;
-  border: 1px solid black;
+  border: 1px solid #2C3E50;
   display: inline-block;
 
   &:hover
   {
-    color: #FFFFFF;
-    background: -webkit-linear-gradient(#27AE60, #27AE60);
-    background: -o-linear-gradient(#27AE60, #27AE60);
-    background: -moz-linear-gradient(#27AE60, #27AE60);
-    background: linear-gradient(#27AE60, #27AE60);
+    color: #ECF0F1;
+    background: #27AE60;
+
+    a
+    {
+      color: #ECF0F1;
+    }
+
   }
 
 }
