--- a/resources/assets/sass/pages/welcome.scss
+++ b/resources/assets/sass/pages/welcome.scss
@@ -33,6 +33,13 @@ label.login
 .welcomeInputText
 {
   width: 90%;
+
+}
+.welcomeInputText:focus
+{
+  outline: none !important;
+  border:1px solid #27AE60;
+  box-shadow: 0 0 10px #27AE60;
 }
 
 .welcomeLink
